--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
 <p>or <a href="https://gratipay.com/emacs-helm/"><img src="https://cdn.rawgit.com/gratipay/gratipay-badge/2.3.0/dist/gratipay.png" alt="Support via Gratipay"></a></p>
 
+<p>or with bitcoins <code>1HyxLfpdJL81rnk2n6dPmbCkaozk4zzPRh</code></p>
+
 
 
 <p><strong>Table of Contents</strong></p>
