Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <p>or <a href="https://gratipay.com/emacs-helm/"><img src="https://cdn.rawgit.com/gratipay/gratipay-badge/2.3.0/dist/gratipay.png" alt="Support via Gratipay"></a></p>
 
-<p>or with bitcoins <code>1HyxLfpdJL81rnk2n6dPmbCkaozk4zzPRh</code></p>
+<p>or with <a href="https://www.strongcoin.com/?ref=1HyxLfpdJL81rnk2n6dPmbCkaozk4zzPRh">Bitcoins</a></p>
 
 
 
